--- a/popup/styles/main.sass
+++ b/popup/styles/main.sass
@@ -7,4 +7,5 @@
 @import 'modules/calculation-settings'
 @import 'modules/settings'
 @import 'modules/result'
+@import 'modules/canvas'
 @import 'modules/error'
