--- a/popup/styles/modules/_header.sass
+++ b/popup/styles/modules/_header.sass
@@ -2,9 +2,8 @@
   background-color: #000
   background-position: 50% 50%
   background-size: cover
-  height: 10em
+  height: 9.5em
   position: relative
-  border-bottom: 8px solid #b17
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.75)
   user-select: none
 
@@ -24,8 +23,6 @@
     text-shadow: inherit
     &:hover
       color: #29b
-
-
 
   .gradient
     height: 100%
@@ -84,3 +81,18 @@
             opacity: 0
       .playback
         font-size: 1.5em
+
+  .progress
+    position: relative
+    width: 100%
+    height: 4px
+    background-color: #b17
+    --progress: 0
+    &:after
+      position: absolute
+      content: ''
+      top: 0
+      bottom: 0
+      left: 0
+      width: calc(var(--progress) * 100%)
+      background-color: #fc2
