--- a/popup/styles/modules/_header.sass
+++ b/popup/styles/modules/_header.sass
@@ -85,14 +85,28 @@
   .progress
     position: relative
     width: 100%
-    height: 4px
-    background-color: #b17
+    height: 10px
+    margin-top: -6px
     --progress: 0
-    &:after
+    --progress-height: 4px
+    cursor: pointer
+    &:hover, &.seeking
+      --progress-height: 10px
+    &:before
+      transition: ease 0.5s height
       position: absolute
       content: ''
-      top: 0
       bottom: 0
       left: 0
       width: calc(var(--progress) * 100%)
+      height: var(--progress-height)
       background-color: #fc2
+    &:after
+      transition: ease 0.5s height
+      position: absolute
+      content: ''
+      bottom: 0
+      right: 0
+      width: calc((1 - var(--progress)) * 100%)
+      height: var(--progress-height)
+      background-color: #b17
